--- a/transport-logistic/index.html
+++ b/transport-logistic/index.html
@@ -265,15 +265,15 @@
                             and empowerment.
                         </p>
                         <div class="body__list list">
-                            <div class="list__item">
-                                <img class="list__image" src="img/icons/delivery.svg" alt="Icon delivery on time">
-                                <div class="list__text">
+                            <div class="list__item item-list">
+                                <img class="item-list__image" src="img/icons/delivery.svg" alt="Icon delivery on time">
+                                <div class="item-list__text">
                                     Delivery on Time
                                 </div>
                             </div>
-                            <div class="list__item">
-                                <img class="list__image" src="img/icons/cost.svg" alt="Icon optimized travel cost">
-                                <div class="list__text">
+                            <div class="list__item item-list">
+                                <img class="item-list__image" src="img/icons/cost.svg" alt="Icon optimized travel cost">
+                                <div class="item-list__text">
                                     Optimized Travel Cost
                                 </div>
                             </div>
