--- a/transport-logistic/index.html
+++ b/transport-logistic/index.html
@@ -313,6 +313,9 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
+        <h4 class="title">
+            Transport title
+        </h4>
         <div>
             A pseudo-class consists of a colon (:) followed by the pseudo-class name (e.g., :hover). A functional
             pseudo-class also contains a pair of parentheses to define the arguments (e.g., :dir()). The element that a
