--- a/guitar/index.html
+++ b/guitar/index.html
@@ -43,6 +43,7 @@
     </header>
     <!--MAIN-->
     <main class="page">
+        <!--        HERO-->
         <section class="page__hero hero">
             <div class="hero__container">
                 <div class="hero__content content">
@@ -63,16 +64,172 @@
                             </a>
                         </div>
                     </div>
-
                 </div>
                 <div class="hero__image image">
                     <img src="img/hero/hero-1.webp" alt="Main image guitar">
                 </div>
             </div>
         </section>
+        <!--        STORE-->
+        <section class="page__store store">
+            <div class="store__container">
+                <h2 class="store__title title">
+                    Check out the <span>Store</span>
+                </h2>
+                <div class="store__category-new category">
+                    <div class="category__subtitle subtitle">
+                        <div class="subtitle__about">
+                            NEW ON THE BOARD
+                        </div>
+                        <a class="subtitle__view" href="#" target="_blank">
+                            view all
+                        </a>
+                    </div>
+                    <div class="category__list list">
+                        <article class="list__card card">
+                            <a class="card__preview" href="#">
+                                <div class="card__image-wrapper">
+                                    <img class="card__image" src="img/store/store-1.webp" alt="Image product">
+                                </div>
+                                <h3 class="card__title">
+                                    The Essential Les Paul
+                                </h3>
+                                <div class="card__price">
+                                    $1,299.00
+                                </div>
+                            </a>
+                        </article>
+                        <article class="list__card card">
+                            <a class="card__preview" href="#">
+                                <div class="card__image-wrapper">
+                                    <img class="card__image" src="img/store/store-2.webp" alt="Image product">
+                                </div>
+                                <h3 class="card__title">
+                                    J-45 Standard
+                                </h3>
+                                <div class="card__price">
+                                    $1,699.00
+                                </div>
+                            </a>
+                        </article>
+                        <article class="list__card card">
+                            <a class="card__preview" href="#">
+                                <div class="card__image-wrapper">
+                                    <img class="card__image" src="img/store/store-3.webp" alt="Image product">
+                                </div>
+                                <h3 class="card__title">
+                                    Hummingbird Standard
+                                </h3>
+                                <div class="card__price">
+                                    $2,099.00
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+                <div class="store__category-top category">
+                    <div class="category__subtitle subtitle">
+                        <div class="subtitle__about">
+                            TOP SELLING
+                        </div>
+                        <a class="subtitle__view" href="#" target="_blank">
+                            view all
+                        </a>
+                    </div>
+                    <div class="category__list list">
+                        <article class="list__card card">
+                            <a class="card__preview" href="#">
+                                <div class="card__image-wrapper">
+                                    <img class="card__image" src="img/store/store-4.webp" alt="Image product">
+                                </div>
+                                <h3 class="card__title">
+                                    Active Precision Bass® PH V
+                                </h3>
+                                <div class="card__price">
+                                    $4,199.00
+                                </div>
+                            </a>
+                        </article>
+                        <article class="list__card card">
+                            <a class="card__preview" href="#">
+                                <div class="card__image-wrapper">
+                                    <img class="card__image" src="img/store/store-5.webp" alt="Image product">
+                                </div>
+                                <h3 class="card__title">
+                                    Redondo Special
+                                </h3>
+                                <div class="card__price">
+                                    $2,800.00
+                                </div>
+                            </a>
+                        </article>
+                        <article class="list__card card">
+                            <a class="card__preview" href="#">
+                                <div class="card__image-wrapper">
+                                    <img class="card__image" src="img/store/store-6.webp" alt="Image product">
+                                </div>
+                                <h3 class="card__title">
+                                    Professional II Stratocaster®
+                                </h3>
+                                <div class="card__price">
+                                    $3,199.00
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--        CATEGORIES-->
+        <section class="page__categories categories">
+            <div class="categories__container">
+                <h2 class="categories__title title">
+                    Choose based on <span>Categories</span>
+                </h2>
+                <div class="categories__list list">
+                    <a class="list__category-card category-card" href="#" target="_blank">
+                        <div class="category-card__wrapper-image">
+                            <img class="category-card__image" src="img/categories/1-1.webp"
+                                 alt="Image preview category">
+                        </div>
+                        <h3 class="category-card__title">
+                            Acoustic
+                        </h3>
+                    </a>
+                    <a class="list__category-card category-card" href="#" target="_blank">
+                        <div class="category-card__wrapper-image">
+                            <img class="category-card__image" src="img/categories/2-2.webp"
+                                 alt="Image preview category">
+                        </div>
+                        <h3 class="category-card__title">
+                            Electric
+                        </h3>
+                    </a>
+                    <a class="list__category-card category-card" href="#" target="_blank">
+                        <div class="category-card__wrapper-image">
+                            <img class="category-card__image" src="img/categories/3-3.webp"
+                                 alt="Image preview category">
+                        </div>
+                        <h3 class="category-card__title">
+                            Basses
+                        </h3>
+                    </a>
+                    <a class="list__category-card category-card" href="#" target="_blank">
+                        <div class="category-card__wrapper-image">
+                            <img class="category-card__image" src="img/categories/4-4.webp"
+                                 alt="Image preview category">
+                        </div>
+                        <h3 class="category-card__title">
+                            Collections
+                        </h3>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <!--FOOTER-->
     <footer class="footer">
+
     </footer>
 </div>
 <script src="js/script.js"></script>
